--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,7 @@ body {
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.5;
+  overflow-x: clip;
 }
 
 body.appear {
